# yew-course

./: .env  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: api.rs  app.rs  main.rs
src/components/: admin_course_card.rs  course_card.rs  mod.rs  my_course_card.rs  user_info.rs
src/pages/: admin_courses.rs  certificates.rs  course_edit.rs  course_info.rs  course_material.rs  courses_list.rs  home.rs  login.rs  material_creation.rs  mod.rs  my_courses.rs  profile_info.rs  register.rs  users_page.rs
