[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.3.0"
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0.117"
dotenv = "0.15.0"
web-sys = {version = "0.3.69", features=["HtmlInputElement"]}
wasm-bindgen = "0.2.92"
yewdux = "0.10.0"
http-auth-basic = "0.3.3"
pulldown-cmark = "0.11.0"
# wasm-logger = "*"
